--- a/projects.html
+++ b/projects.html
@@ -1724,7 +1724,7 @@
     <hr>
     <br>
     <p>
-        <b>Creator of GxmesUniverse</b> | Copyright © 2021-2023
+        <b>Creator of GxmesUniverse</b> | Copyright © 2023
     </p>
 </body>
 
