--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#36393F">
     <meta property="og:image:url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
     <meta property="og:image:secure_url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
-    <meta name="description" content="Play games online for free, no block!">
+    <meta name="description" content="We care if you have fun, with no Censorship.">
     <link rel="icon" type="image/jpeg" sizes="180x180" href="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -567,13 +567,15 @@
         <!--- Credits to Nexion.xyz! :) --->
         <pre>
 
-               __    _ __                              
-   ____  __/|_/ /_  (_) /___ ___/|_____ ___  ___  _____
-  / __ \|    / __ \/ / / __ `/    / __ `__ \/ _ \/ ___/
- / / / /_ __/ /_/ / / / /_/ /_ __/ / / / / /  __(__  ) 
-/_/ /_/ |/ /_.___/_/_/\__, / |/ /_/ /_/ /_/\___/____/  
-                     /____/                            
-                           💫 best games website
+ ________ ___  ___  ________  ___  ________  ________      
+|\  _____\\  \|\  \|\   ____\|\  \|\   __  \|\   ___  \    
+\ \  \__/\ \  \\\  \ \  \___|\ \  \ \  \|\  \ \  \\ \  \   
+ \ \   __\\ \  \\\  \ \_____  \ \  \ \  \\\  \ \  \\ \  \  
+  \ \  \_| \ \  \\\  \|____|\  \ \  \ \  \\\  \ \  \\ \  \ 
+   \ \__\   \ \_______\____\_\  \ \__\ \_______\ \__\\ \__\
+    \|__|    \|_______|\_________\|__|\|_______|\|__| \|__|
+                      \|_________|                                                   
+                                   💫 best games website
             </pre>
         <div class="buttons">
           <p id="url-target"></p>
