--- a/projects.html
+++ b/projects.html
@@ -354,13 +354,10 @@
 
 <body>
     <div class="navbar">
-        <a href="index.html">home</a>
-        <a href="developer.html">dev</a>
-        <a href="projects.html">games</a>
-        <a href="gba.html">gameboy</a>
-        <a href="trending.html">most popular</a>
-        <a href="extra.html" style="float:right;">bookmarklets</a>
-        <a href="tos.html" style="float:right;">terms & license</a>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Games</a>
+        <a href="gba.html">Emulated Games</a>
+        <a href="trending.html">Popular</a>
     </div>
     <br>
     <br>
@@ -404,18 +401,6 @@
             <div class="gapp">
                 <img class="gicon" src="projects/9007199254740992/logo-4.png" alt="icon" />
                 <h1 class="gname">9007199254740992</h1>
-            </div>
-        </a>
-        <a href="projects/99balls/index.html" class="glink container">
-            <div class="gapp">
-                <img class="gicon" src="projects/99balls/99-balls-evo.jpg" alt="icon" />
-                <h1 class="gname">99 Balls</h1>
-            </div>
-        </a>
-        <a href="projects/ages-of-conflict/index.html" class="glink container">
-            <div class="gapp">
-                <img class="gicon" src="projects/ages-of-conflict/splash.jpg" alt="icon" />
-                <h1 class="gname">Age of Conflict</h1>
             </div>
         </a>
         <a href="projects/achievementunlocked/index.html" class="glink container">
@@ -1334,12 +1319,6 @@
             <div class="gapp">
                 <img class="gicon" src="projects/popcat-classic/popcat.gif" alt="icon" />
                 <h1 class="gname">Popcat Clicker</h1>
-            </div>
-        </a>
-        <a href="projects/phub/index.html" class="glink container">
-            <div class="gapp">
-                <img class="gicon" src="projects/phub/image_2023-02-08_173118117.png" alt="icon" />
-                <h1 class="gname">PxrnHub</h1>
             </div>
         </a>
         <a href="projects/portalflash/index.html" class="glink container">
