--- a/projects.html
+++ b/projects.html
@@ -8,11 +8,11 @@
     <title>Fusion</title>
     <meta name="keywords" content="educational games, fusion, math, educational">
     <meta name="theme-color" content="#36393F">
-    <meta property="og:image:url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
-    <meta property="og:image:secure_url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
-    <meta name="description" content="Play games online for free, no block!">
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="shortcut-icon" href="/favicon.ico" />
+    <meta property="og:image:url" content="https://ibb.co/VTr1gcR">
+    <meta property="og:image:secure_url" content="https://ibb.co/VTr1gcR">
+    <meta name="description" content="We care about you having fun, with no Censorship.">
+    <link rel="icon" href="https://ibb.co/VTr1gcR" />
+    <link rel="shortcut-icon" href="https://ibb.co/VTr1gcR" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
