--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Fusion</title>
     <meta name="keywords" content="nabilafk, nabil's gameboy, games, nabil's games">
     <meta name="theme-color" content="#36393F">
-    <meta property="og:image:url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
-    <meta property="og:image:secure_url" content="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
+    <meta property="og:image:url" content="https://ibb.co/VTr1gcR">
+    <meta property="og:image:secure_url" content="https://ibb.co/VTr1gcR">
     <meta name="description" content="We care if you have fun, with no Censorship.">
-    <link rel="icon" type="image/jpeg" sizes="180x180" href="https://github.com/science246/science246.github.io/blob/gh-pages/project-assets/img/nabillogo.png?raw=true">
+    <link rel="icon" type="image/jpeg" sizes="180x180" href="https://ibb.co/VTr1gcR">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
@@ -554,13 +554,10 @@
       <div class="loader"></div>
     </div>
     <div class="navbar">
-      <a href="index.html">home</a>
-      <a href="developer.html">dev</a>
-      <a href="projects.html">games</a>
-      <a href="gba.html">gameboy</a>
-      <a href="trending.html">most popular</a>
-      <a href="extra.html" style="float:right;">bookmarklets</a>
-      <a href="tos.html" style="float:right;">terms & license</a>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Games</a>
+      <a href="gba.html">Emulated Games</a>
+      <a href="trending.html">Popular</a>
     </div>
     <div class="top-greeting" id="home">
       <div class="center-box">
@@ -586,21 +583,21 @@
     <div class="stats" id="stats">
       <div class="l">
         <h1>
-          <strong>total apps</strong>
+          <strong>Total Games</strong>
         </h1>
-        <h1 id="guild_count" class="number">310+</h1>
+        <h1 id="guild_count" class="number">200+</h1>
       </div>
       <div class="m">
         <h1>
-          <strong>trusted by</strong>
+          <strong>Trusted by</strong>
         </h1>
-        <h1 id="commands_count" class="number">770k+</h1>
+        <h1 id="commands_count" class="number">100+</h1>
       </div>
       <div class="r">
         <h1>
-          <strong>daily users</strong>
+          <strong>Daily Users</strong>
         </h1>
-        <h1 id="cmdsLast24h_count" class="number">4000+</h1>
+        <h1 id="cmdsLast24h_count" class="number">100+</h1>
       </div>
     </div>
     <script>
