--- a/index.html
+++ b/index.html
@@ -583,23 +583,31 @@
     <div class="stats" id="stats">
       <div class="l">
         <h1>
-          <strong>Total Games</strong>
-        </h1>
-        <h1 id="guild_count" class="number">200+</h1>
-      </div>
-      <div class="m">
-        <h1>
-          <strong>Trusted by</strong>
-        </h1>
-        <h1 id="commands_count" class="number">100+</h1>
-      </div>
-      <div class="r">
-        <h1>
-          <strong>Daily Users</strong>
-        </h1>
-        <h1 id="cmdsLast24h_count" class="number">100+</h1>
-      </div>
-    </div>
+       <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <div class="flex-container">
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" loading="lazy" src="img/reviews/NotJumbled86.webp" alt="NotJumbled86" />
+                  <div class="card-body">
+                    <h3>NotJumbled86</h3>
+                    <p class="card-text">
+                      10/10 Site, it is easy to use and has a lot of features. When it gets blocked, you can just deploy your own copy of the site!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="card-wrapper">
+                <div class="card text-center">
+                  <img class="card-img-top" loading="lazy" src="img/reviews/Piplup7575.webp" alt="Piplup7575" />
+                  <div class="card-body">
+                    <h3>Piplup7575</h3>
+                    <p class="card-text">10/10 would meme again. i am totally not one of the people working on the site...</p>
+                  </div>
+                </div>
+              </div>
     <script>
       var url = document.getElementById("url-target");
       var urlObj = new window.URL(window.location.href);
