--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fusion</title>
-    <meta name="keywords" content="nabilafk, nabil's gameboy, games, nabil's games">
+    <meta name="keywords" content="fusion games, fusiongames, fusion">
     <meta name="theme-color" content="#36393F">
     <meta property="og:image:url" content="https://ibb.co/VTr1gcR">
     <meta property="og:image:secure_url" content="https://ibb.co/VTr1gcR">
